[package]
edition = "2021"
name = "eprobe"
version = "0.1.0"
license = "MIT OR Apache-2.0"


[dependencies]
#dap-rs = { path = "./dap-rs", features = [ "defmt" ]}
dap-rs = { git = "https://github.com/korken89/dap-rs/", features = [ "defmt" ]}

embassy-stm32 = { version = "0.1.0", features = [ "defmt", "stm32f103c8", "unstable-pac", "time-driver-any" ]  }
embassy-sync = { version = "0.5.0", features = ["defmt"] }
embassy-executor = { version = "0.4.0", features = ["arch-cortex-m", "executor-thread", "defmt", "integrated-timers"] }
embassy-time = { version = "0.2", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }
embassy-usb = { version = "0.1.0", features = ["defmt"] }
embassy-futures = { version = "0.1.0" }

defmt = "0.3"
defmt-rtt = "0.4"

cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.0"
embedded-hal = "0.2.6"
panic-probe = { version = "0.3", features = ["print-defmt"] }
futures = { version = "0.3.17", default-features = false, features = ["async-await"] }
heapless = { version = "0.8", default-features = false }
nb = "1.0.0"
static_cell = "2.0.0"
num_enum = { version = "0.7.1", default-features = false }

[profile.dev]
opt-level = "s"

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = "fat"
opt-level = 's'
overflow-checks = false

[patch.crates-io]
embassy-stm32 = { path = "../../embassy/embassy-stm32" }
embassy-sync = { path = "../../embassy/embassy-sync" }
embassy-executor = { path = "../../embassy/embassy-executor" }
embassy-time = { path = "../../embassy/embassy-time" }
embassy-usb = { path = "../../embassy/embassy-usb" }
embassy-futures = { path = "../../embassy/embassy-futures" }
