[package]
edition = "2021"
name = "eprobe"
version = "0.1.0"
license = "MIT OR Apache-2.0"


[dependencies]
#dap-rs = { path = "../dap-rs", features = [ "defmt" ]}
dap-rs = { git = "https://github.com/probe-rs/dap-rs", rev = "41ed5665c65e78af9556d60ce6c5f38ca7bbaa1b", features = [ "defmt" ]}

embassy-stm32 = { version = "0.5", features = [ "defmt", "stm32f103c8", "unstable-pac", "time-driver-any" ]  }
embassy-sync = { version = "0.7", features = ["defmt"] }
embassy-executor = { version = "0.9", features = ["arch-cortex-m", "executor-thread", "defmt"] }
embassy-time = { version = "0.5", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }
embassy-usb = { version = "0.5", features = ["defmt"] }
embassy-futures = { version = "0.1" }

defmt = "1"
defmt-rtt = "1"
panic-probe = { version = "1", features = ["print-defmt"] }

cortex-m = { version = "0.7.7", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.5"
embedded-hal = "1.0.0"
futures = { version = "0.3.31", default-features = false, features = ["async-await"] }
heapless = { version = "0.9", default-features = false }
nb = "1.1.0"
static_cell = "2.1.1"
num_enum = { version = "0.7.5", default-features = false }

[profile.dev]
opt-level = "s"

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = "fat"
opt-level = 's'
overflow-checks = false

[patch.crates-io]
embassy-stm32 = { git = "https://github.com/embassy-rs/embassy", rev = "959ec78ec46c6af0455ad111ee33524def8dde40" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy", rev = "959ec78ec46c6af0455ad111ee33524def8dde40" }
embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "959ec78ec46c6af0455ad111ee33524def8dde40" }
embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "959ec78ec46c6af0455ad111ee33524def8dde40" }
embassy-usb = { git = "https://github.com/embassy-rs/embassy", rev = "959ec78ec46c6af0455ad111ee33524def8dde40" }
embassy-futures = { git = "https://github.com/embassy-rs/embassy", rev = "959ec78ec46c6af0455ad111ee33524def8dde40" }
