[package]
edition = "2021"
name = "eprobe-bootloader"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[features]
log = []
defmt = [
    "dep:defmt",
    "dep:defmt-rtt",
    "dep:panic-probe",
    "embassy-stm32/defmt",
    "embassy-sync/defmt",
    "embassy-usb/defmt",
]

[dependencies]
embassy-stm32 = { version = "0.2.0", features = [ "stm32f103c8", "unstable-pac" ]  }
embassy-sync = { version = "0.7.0", features = [] }
embassy-usb = { version = "0.4.0", features = [] }
embassy-futures = { version = "0.1.0" }

defmt = { version = "1", optional = true }
defmt-rtt = { version = "1", optional = true }
panic-probe = { version = "1", optional = true, features = ["print-defmt"] }
panic-halt = "1"

cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.0"
embedded-hal = "0.2.7"
futures = { version = "0.3.17", default-features = false, features = ["async-await"] }
heapless = { version = "0.8", default-features = false }
nb = "1.0.0"
static_cell = "2.0.0"

[profile.dev]
opt-level = "s"

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = "fat"
opt-level = 's'
overflow-checks = false

[patch.crates-io]
embassy-stm32 = { git = "https://github.com/embassy-rs/embassy", rev = "60d31a68eaa66f5454419500f2c5bf2c7f61d72d" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy", rev = "60d31a68eaa66f5454419500f2c5bf2c7f61d72d" }
embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "60d31a68eaa66f5454419500f2c5bf2c7f61d72d" }
embassy-usb = { git = "https://github.com/embassy-rs/embassy", rev = "60d31a68eaa66f5454419500f2c5bf2c7f61d72d" }
embassy-futures = { git = "https://github.com/embassy-rs/embassy", rev = "60d31a68eaa66f5454419500f2c5bf2c7f61d72d" }
