[package]
edition = "2021"
name = "eprobe-bootloader"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[features]
log = []
defmt = [
    "dep:defmt",
    "dep:defmt-rtt",
    "dep:panic-probe",
    "embassy-stm32/defmt",
    "embassy-sync/defmt",
    "embassy-usb/defmt",
]

[dependencies]
embassy-stm32 = { version = "0.5", features = [ "stm32f103c8", "unstable-pac", "time-driver-any" ]  }
embassy-sync = { version = "0.7" }
embassy-usb = { version = "0.5" }
embassy-futures = { version = "0.1" }

defmt = { version = "1", optional = true }
defmt-rtt = { version = "1", optional = true }
panic-probe = { version = "1", optional = true, features = ["print-defmt"] }
panic-halt = "1"

cortex-m = { version = "0.7.7", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.5"
embedded-hal = "1.0.0"
futures = { version = "0.3.31", default-features = false, features = ["async-await"] }
heapless = { version = "0.9", default-features = false }
nb = "1.1.0"
static_cell = "2.1.1"

[profile.dev]
opt-level = "s"

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = "fat"
opt-level = 's'
overflow-checks = false

[patch.crates-io]
embassy-stm32 = { git = "https://github.com/embassy-rs/embassy", rev = "dbdc7a47a5b0c8ece58b23a57ba861620d49b635" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy", rev = "dbdc7a47a5b0c8ece58b23a57ba861620d49b635" }
embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "dbdc7a47a5b0c8ece58b23a57ba861620d49b635" }
embassy-usb = { git = "https://github.com/embassy-rs/embassy", rev = "dbdc7a47a5b0c8ece58b23a57ba861620d49b635" }
embassy-futures = { git = "https://github.com/embassy-rs/embassy", rev = "dbdc7a47a5b0c8ece58b23a57ba861620d49b635" }
